--- a/head.html
+++ b/head.html
@@ -7,15 +7,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="head">
     <div class="CH">
-    <div class="Title_Head">YouCan</div>
+        <div class="Title_Head">Logo.</div>
         <div class="Nav">
            <a class="O1_Head" href="#">Home</a>
-           <a class="O2_Head" href="#">Work</a>
+           <a class="O2_Head" href="#">Services</a>
            <a class="O3_Head" href="#">Contact me</a>
         </div>
 
-        <button class="O4_Head">Login in</button>
+        <div class="Button"><button class="O4_Head">Reserve Now</button></div>
+    </div>
+
+    <div class="Body">
+        <img class="Imge_Body" src="/Design/Kiyotaka Ayanokoji Transparent PNG12.png">
+        <div class="circule"></div>
+        <h1 class="h1_Body">You need editing services <br>
+            Get started with me.</h1>
+        <button class="Checking_Button">Project Checking</button>
+        <button class="Reserve_Button">Reserve Now</button>
+
+    </div>
+    </div>
+    <div class="Part2">
+        <h1>Services</h1>
+        <div class="Card_Gestion">
+            <div class="Card1">
+                <h1 class="Title_Card1"></h1>
+                <p class="Discription_Card1"></p>
+            </div>
+        </div>
     </div>
 
 </body>
