--- a/head.html
+++ b/head.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="Body">
-        <img class="Imge_Body" src="/Design/Kiyotaka Ayanokoji Transparent PNG12.png">
+        <img class="Imge_Body" src="Design/Kiyotaka Ayanokoji Transparent PNG12.png">
         <div class="circule"></div>
         <h1 class="h1_Body">You need editing services <br>
             Get started with me.</h1>
