--- a/head.html
+++ b/head.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <div class="head">
@@ -33,11 +34,33 @@
         <h1>Services</h1>
         <div class="Card_Gestion">
             <div class="Card1">
-                <h1 class="Title_Card1"></h1>
-                <p class="Discription_Card1"></p>
+                <h1 class="Icon_Card1"><i class="fa-solid fa-bezier-curve" style="font-size: 50px;"></i></h1>
+                <p class="Title_Card1"> Motion Graphique </p>
+                <p class="Discription_Card1"> Animated visuals that bring your <br> messageto life and make your <br> videos more engaging. </p>
+                <button class="Button_Card1">See more <i class="fa-solid fa-angle-right"></i></button>
+            </div>
+            <div class="Card1">
+                <h1 class="Icon_Card1"><i class="fa-solid fa-headphones" style="font-size: 60px;"></i></h1>
+                <p class="Title_Card1"> Sound Design </p>
+                <p class="Discription_Card1"> Creative sound effects that bring your <br> audio to life and make your projects</p>
+                <button class="Button_Card1">See more <i class="fa-solid fa-angle-right"></i></button>
+            </div>
+            <div class="Card1">
+                <h1 class="Icon_Card1"><i class="fa-solid fa-wand-magic-sparkles" style="font-size: 50px;"></i></h1>
+                <p class="Title_Card1"> Color Grading</p>
+                <p class="Discription_Card1"> Professional color grading that <br> enhances the mood and gives your <br> visuals a cinematic look. </p>
+                <button class="Button_Card1">See more <i class="fa-solid fa-angle-right"></i></button>
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
 
 </body>
 </html>
