--- a/head.html
+++ b/head.html
@@ -25,8 +25,10 @@
         <div class="circule"></div>
         <h1 class="h1_Body">You need editing services <br>
             Get started with me.</h1>
-        <button class="Checking_Button">Project Checking</button>
-        <button class="Reserve_Button">Reserve Now</button>
+        <div class="Bottom_body">
+            <button class="Checking_Button">Project Checking</button>
+            <button class="Reserve_Button">Reserve Now</button>
+        </div>
 
     </div>
     </div>
